--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Popflicks</string>
+    <string name="no_movies">No movies</string>
+    <string name="no_internet_connection">Connect to the internet, please.</string>
 </resources>
