--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="no_internet_connection">Connect to the internet, please.</string>
     <string name="settings_menu_item">Settings</string>
     <string name="settings_title">Search Movies</string>
+    <string-array name="search_array">
+        <item>popular</item>
+        <item>highest_rated</item>
+    </string-array>
 </resources>
