--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="settings_menu_item">Settings</string>
     <string name="settings_title">Search Movies</string>
     <string-array name="search_array">
-        <item>popular</item>
-        <item>highest_rated</item>
+        <item>Search Movies</item>
+        <item>Most Popular</item>
+        <item>Highest Rated</item>
     </string-array>
 </resources>
