--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="no_internet_connection">Connect to the internet, please.</string>
     <string name="settings_menu_item">Settings</string>
     <string name="settings_title">Search Movies</string>
+    <string name="avg">Rating:</string>
     <string-array name="search_array">
         <item>Search Movies</item>
         <item>Most Popular</item>
